--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
     <h1>Monique's Weather App</h1>
-    <footer>Coded by Monique Lidecana</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/MoSavvyCodes" target="_blank">
+        Monique Lidecana
+      </a>
+      code hosted on<a
+        href="https://github.com/MoSavvyCodes/final-project"
+        target="_blank"
+      >
+        GitHub</a
+      >
+      and website hosted
+      <a href="https://savvy-weather-app.netlify.app" target="_blank">
+        on Netlify</a
+      >
+    </footer>
   </body>
 </html>
