--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
       <a href="https://github.com/MoSavvyCodes" target="_blank">
         Monique Lidecana
       </a>
-      code hosted on<a
-        href="https://github.com/MoSavvyCodes/final-project"
-        target="_blank"
+      is
+      <a href="https://github.com/MoSavvyCodes/final-project" target="_blank">
+        open-sourced on GitHub</a
       >
-        GitHub</a
-      >
-      and website hosted
+      and
       <a href="https://savvy-weather-app.netlify.app" target="_blank">
-        on Netlify</a
+        hosted on Netlify</a
       >
     </footer>
   </body>
