--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Weather Application</title>
   </head>
   <body>
     <h1>Monique's Weather App</h1>
+
     <footer>
       Coded by
       <a href="https://github.com/MoSavvyCodes" target="_blank">
