Updated footer content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Monique's Weather App</h1>
 
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/MoSavvyCodes" target="_blank">
         Monique Lidecana
       </a>
