Added content to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Weather Application</title>
   </head>
   <body>
-    <h1>Monique's Weather App</h1>
+    <header></header>
+    <main>
+      <h1>Monique's Weather App</h1>
+    </main>
 
     <footer>
       This project was coded by
