Added HTML to project

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Weather Application</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
     <main>
-      <h1>Monique's Weather App</h1>
+      <h1>New York</h1>
+      <p>
+        Friday 11:54, cloudy
+        <br />
+        Humidity: 66%, Wind: 3.13km/h
+      </p>
+      *12°C
     </main>
 
     <footer>
