styled the container and added custom fonts

--- a/index.html
+++ b/index.html
@@ -4,38 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather Application</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <h1>New York</h1>
-      <p>
-        Friday 11:54, cloudy
-        <br />
-        Humidity: 66%, Wind: 3.13km/h
-      </p>
-      *12°C
-    </main>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <h1>New York</h1>
+        <p>
+          Friday 11:54, cloudy
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+        *12°C
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://github.com/MoSavvyCodes" target="_blank">
-        Monique Lidecana
-      </a>
-      is
-      <a href="https://github.com/MoSavvyCodes/final-project" target="_blank">
-        open-sourced on GitHub</a
-      >
-      and
-      <a href="https://savvy-weather-app.netlify.app" target="_blank">
-        hosted on Netlify</a
-      >
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/MoSavvyCodes" target="_blank">
+          Monique Lidecana
+        </a>
+        is
+        <a href="https://github.com/MoSavvyCodes/final-project" target="_blank">
+          open-sourced on GitHub</a
+        >
+        and
+        <a href="https://savvy-weather-app.netlify.app" target="_blank">
+          hosted on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
