--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </main>
 
       <footer>
-        This project was coded by
+        This project coded by
         <a href="https://github.com/MoSavvyCodes" target="_blank">
           Monique Lidecana
         </a>
