Updated CSS content

--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
         </form>
       </header>
       <main>
-        <h1>New York</h1>
-        <p>
-          Friday 11:54, cloudy
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-        *12°C
+        <div class="weather-app-data">
+          <div>
+            <h1>New York</h1>
+            <p>
+              Friday 11:54, cloudy
+              <br />
+              Humidity: 66%, Wind: 3.13km/h
+            </p>
+          </div>
+          <div>*12°C</div>
+        </div>
       </main>
 
       <footer>
