--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">New York</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Friday 11:54, cloudy
               <br />
@@ -40,7 +40,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
-            <div class="weather-app-temperature" id="temperature">12</div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
