--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Friday 11:54, cloudy
+              <span id="description"> </span>
               <br />
               Humidity: <strong>66%,</strong> Wind: <strong> 3.13km/h </strong>
             </p>
@@ -41,7 +42,7 @@
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weather-app-unit">°C</div>
+            <div class="weather-app-unit">°F</div>
           </div>
         </div>
       </main>
