--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Friday 11:54, cloudy
+              Friday 11:54,
               <span id="description"> </span>
               <br />
-              Humidity: <strong>66%,</strong> Wind: <strong> 3.13km/h </strong>
+              Humidity: <strong id="humidity"></strong> Wind:
+              <strong> 3.13km/h </strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
