--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Friday 11:54,
+              <span id="time"></span>
               <span id="description"> </span>
               <br />
               Humidity: <strong id="humidity"></strong> Wind:
-              <strong> 3.13km/h </strong>
+              <strong id="wind-speed"> 3.13km/h </strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
