Started adding rows for weather

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="weather-app-unit">°F</div>
           </div>
         </div>
+        <div class="weather-forcast">
+          <div class="weather-forcast-day">Tue 🌤️ 15° 9°</div>
+        </div>
       </main>
 
       <footer>
